Remplacement <main> par <article>

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
     <!---------------------------------------Fin Nav-------------------------------->
     <section>
-        <main>
+        <article>
             <h1>Hébergement à Marseille</h1>
             <!----------------------------------------------1re Ligne--------------------------------------->
             <div class="first-choice">
@@ -200,7 +200,7 @@
                     <h2>Afficher plus</h2>
                 </a>
             </div>
-        </main>
+        </article>
         <!------------------------------------------------aside--------------------------------------------------->
         <aside>
             <h1>Les plus populaires</h1>
