Ajout <main> et <footer>

--- a/index.html
+++ b/index.html
@@ -271,6 +271,62 @@
         </aside>
     </section>
 
+    <main>
+        <h2>Activités à Marseille</h2>
+        <div class="ativités">
+
+            <div class="vieux-port">
+                <div class="titre-carte">
+                    <h5>vieux-port</h5>
+                </div>
+                <div class="image-carte">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <div class="Pomègues">
+
+                <h5>Fortde de Pomègues</h5>
+            </div>
+            <div class="Calanques">
+
+                <h5>Parc national des Calanques</h5>
+            </div>
+            <div class="notre-dame">
+                <h5>Notre-Dame-de-la-Garde</h5>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="À-propos">
+            <h4>À-propos</h4>
+            <ul>
+                <li>Fonctionnement du site</li>
+                <li>Conditions générales</li>
+                <li>Donnéés et confidentialité</li>
+            </ul>
+        </div>
+        <div class="Nos hébergements">
+            <h4>Nos hébergements</h4>
+            <ul>
+                <li>Charte qualité</li>
+                <li>Proposer votre hôtel</li>
+            </ul>
+        </div>
+        <div class="assitance">
+            <h4>Assitance</h4>
+            <ul>
+                <a href="#">
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+            </ul>
+            </a>
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
