--- a/index.html
+++ b/index.html
@@ -164,18 +164,18 @@
                     </a>
                     <a href="#">
                         <h2>Hôtel du port</h2>
+                    </a>
+                    <a href="#">
+                        <h3>Nuit à partir de 76€</h3>
+                    </a>
 
-                        <a href="#">
-                            <h3>Nuit à partir de 76€</h3>
-                        </a>
-
-                        <a href="#">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-duotone fa-star"></i>
-                        </a>
+                    <a href="#">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-duotone fa-star"></i>
+                    </a>
                 </div>
                 <div class="option-6">
                     <a href="#">
@@ -276,52 +276,63 @@
         <div class="ativités">
 
             <div class="vieux-port">
-                <div class="titre-carte">
-                    <h5>vieux-port</h5>
-                </div>
-                <div class="image-carte">
-                    <p></p>
-                </div>
+
+                <button>vieux-port</button>
 
             </div>
 
-            <div class="Pomègues">
+            <div class="pomègues">
 
-                <h5>Fortde de Pomègues</h5>
-            </div>
-            <div class="Calanques">
+                <button>Fort de Pomègues</button>
 
-                <h5>Parc national des Calanques</h5>
+
             </div>
+
+            <div class="calanques">
+
+
+                <button>Parc national des Calanques</button>
+
+
+            </div>
+
             <div class="notre-dame">
-                <h5>Notre-Dame-de-la-Garde</h5>
+                <button>Notre-Dame-de-la-Garde</button>
+
             </div>
+
         </div>
     </main>
 
     <footer>
         <div class="À-propos">
             <h4>À-propos</h4>
-            <ul>
-                <li>Fonctionnement du site</li>
-                <li>Conditions générales</li>
-                <li>Donnéés et confidentialité</li>
-            </ul>
+            <a href="#">
+                <ul>
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales</li>
+                    <li>Donnéés et confidentialité</li>
+                </ul>
+            </a>
         </div>
+
         <div class="Nos hébergements">
             <h4>Nos hébergements</h4>
-            <ul>
-                <li>Charte qualité</li>
-                <li>Proposer votre hôtel</li>
-            </ul>
+            <a href="#">
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Proposer votre hôtel</li>
+                </ul>
+            </a>
         </div>
+
         <div class="assitance">
             <h4>Assitance</h4>
-            <ul>
-                <a href="#">
+            <a href="#">
+                <ul>
                     <li>Centre d'aide</li>
                     <li>Nous contacter</li>
-            </ul>
+                </ul>
             </a>
         </div>
 
