styles.css style .css header<=>nav

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Booki</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,17 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Booki</title>
+    <meta name="description" content="Template to start HTML">
+    <link rel="stylesheet" href="styles.css/style.css">
 
 </head>
 
 <body>
-    <!-----------------------------début header--------------------------------->
-    <header>
+    <!-- ---------------------------début nav------------------------------- -->
+    <nav>
         <div class="barre-navigation">
             <div class="logo">
                 <img src="images/logo/Booki.png" alt="logo">
@@ -34,12 +31,12 @@
                 <a href="#">Activité</a>
             </div>
         </div>
-    </header>
-    <!---------------------------------Fin header--------------------------->
+    </nav>
+    <!-- -------------------------------Fin nav------------------------- -->
 
-    <!-----------------------------------Début nav-------------------------->
+    <!-- ---------------------------------Début nav------------------------ -->
 
-    <nav>
+    <header>
         <div class="hebergements">
 
             <div class="texte-top">
@@ -70,12 +67,13 @@
             <i class="fa-solid fa-info"></i>
             <p> Plus de 500 logement sont disponibles dans cette ville </p>
         </div>
-    </nav>
-    <!---------------------------------------Fin Nav-------------------------------->
+    </header>
+
+    <!-- -------------------------------------Fin Nav------------------------------ -->
     <section>
         <article>
             <h1>Hébergement à Marseille</h1>
-            <!----------------------------------------------1re Ligne--------------------------------------->
+            <!--- -------------------------------------------1re Ligne------------------------------------- -->
             <div class="first-choice">
                 <div class="option-1">
                     <a href="#">
@@ -135,7 +133,7 @@
                     </a>
                 </div>
             </div>
-            <!---------------------------------2eme ligne--------------------------------------------->
+            <!-- -------------------------------2eme ligne------------------------------------------- -->
             <div class="second-choice">
                 <div class="option-4">
                     <a href="#">
@@ -201,11 +199,11 @@
                 </a>
             </div>
         </article>
-        <!------------------------------------------------aside--------------------------------------------------->
+        <!-- ----------------------------------------------aside------------------------------------------------- -->
         <aside>
             <h1>Les plus populaires</h1>
             <div class="populaires">
-                <!--------------------------------------------Image 1------------------------------------->
+                <!-- ------------------------------------------Image 1----------------------------------- -->
                 <div class="image-1">
                     <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                             alt="Hôtel-Le-soleil-du-matin"></a>
@@ -226,7 +224,7 @@
                     </a>
                 </div>
 
-                <!----------------------------------------------Image 2--------------------------------------------------->
+                <!-- -------------------------------------------Image 2------------------------------------------------- -->
                 <div class="image-2">
                     <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                             alt="Hôtel-Le-soleil-du-matin"></a>
@@ -246,7 +244,7 @@
                         <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
-                <!----------------------------------------------Image 3--------------------------------------------------->
+                <!-- --------------------------------------------Image 3------------------------------------------------- -->
                 <div class="image-3">
                     <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                             alt="Hôtel-Le-soleil-du-matin"></a>
@@ -276,32 +274,46 @@
         <div class="ativités">
 
             <div class="vieux-port">
+                <div class="card">
+                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt=" Vieux-Port">
+                    <div class="container">
+                        <h4><b>Vieux-Port</b></h4>
 
-                <button>vieux-port</button>
+                    </div>
 
-            </div>
+                </div>
 
-            <div class="pomègues">
+                <div class="pomègues">
 
-                <button>Fort de Pomègues</button>
+                    <div class="card">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt=" Vieux-Port">
+                        <div class="container">
+                            <h4><b>Vieux-Port</b></h4>
 
+                        </div>
+                    </div>
 
-            </div>
+                    <div class="calanques">
 
-            <div class="calanques">
+                        <div class="card">
+                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
+                                Vieux-Port">
+                            <div class="container">
+                                <h4><b>Vieux-Port</b></h4>
 
+                            </div>
+                        </div>
 
-                <button>Parc national des Calanques</button>
+                        <div class="notre-dame">
+                            <div class="card">
+                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
+                                    Vieux-Port">
+                                <div class="container">
+                                    <h4><b>Vieux-Port</b></h4>
 
-
-            </div>
-
-            <div class="notre-dame">
-                <button>Notre-Dame-de-la-Garde</button>
-
-            </div>
-
-        </div>
+                                </div>
+                            </div>
+                        </div>
     </main>
 
     <footer>
