mise à jour code html

--- a/index.html
+++ b/index.html
@@ -21,20 +21,17 @@
 <body>
     <!-- ---------------------------début nav------------------------------- -->
     <nav>
-        <div class="barre-navigation">
-            <div class="logo">
-                <img src="images/logo/Booki.png" alt="logo">
-            </div>
-            <div class="liens">
+        <img src="images/logo/Booki.png" alt="logo">
 
-                <a href="#">Hébergements</a>
-                <a href="#">Activité</a>
-            </div>
-        </div>
+        <ul>
+            <li>Hébergements</li>
+            <li>Activités</li>
+        </ul>
+
     </nav>
     <!-- -------------------------------Fin nav------------------------- -->
 
-    <!-- ---------------------------------Début nav------------------------ -->
+    <!-- ---------------------------------Début header------------------------ -->
 
     <header>
         <div class="hebergements">
@@ -69,24 +66,18 @@
         </div>
     </header>
 
-    <!-- -------------------------------------Fin Nav------------------------------ -->
+    <!-- -------------------------------------Fin header------------------------------ -->
     <section>
         <article>
             <h1>Hébergement à Marseille</h1>
-            <!--- -------------------------------------------1re Ligne------------------------------------- -->
+            <!-- ----------------------------------------1re ligne----------------------------------------------- -->
             <div class="first-choice">
-                <div class="option-1">
+                <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                             alt="hébergement-canebière">
-                    </a>
-                    <a href="#">
                         <h2>Auberge Canebière</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 25€</h3>
-                    </a>
-                    <a href="#">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -94,18 +85,12 @@
                         <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
-                <div class="option-2">
+                <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                             alt="hébergement-canebière">
-                    </a>
-                    <a href="#">
                         <h2>Hôtel du port</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 52€</h3>
-                    </a>
-                    <a href="#">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -113,18 +98,12 @@
                         <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
-                <div class="option-3">
+                <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                             alt="hébergement-canebière">
-                    </a>
-                    <a href="#">
                         <h2>Hôtel Les mouettes</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 76€</h3>
-                    </a>
-                    <a href="#">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -133,60 +112,45 @@
                     </a>
                 </div>
             </div>
-            <!-- -------------------------------2eme ligne------------------------------------------- -->
+            <!-- ------------------------------------------2eme migne-------------------------------------------------- -->
             <div class="second-choice">
-                <div class="option-4">
+                <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                             alt="hébergement-canebière">
-                    </a>
-                    <a href="#">
                         <h2>Auberge Canebière</h2>
-                    </a>
-
-                    <a href="#">
                         <h3>Nuit à partir de 76€</h3>
-                    </a>
-                    <a href="#">
+
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-duotone fa-star"></i>
+
                     </a>
                 </div>
-                <div class="option-5">
+                <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                             alt="hébergement-canebière">
-                    </a>
-                    <a href="#">
                         <h2>Hôtel du port</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 76€</h3>
-                    </a>
 
-                    <a href="#">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-duotone fa-star"></i>
+
                     </a>
                 </div>
-                <div class="option-6">
+                <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                             alt="hébergement-canebière">
-                    </a>
-                    <a href="#">
                         <h2>Hôtel Les mouettes</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 76€</h3>
-                    </a>
-                    <a href="#">
+
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -194,28 +158,25 @@
                         <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
+
                 <a href="#">
                     <h2>Afficher plus</h2>
                 </a>
+
             </div>
         </article>
-        <!-- ----------------------------------------------aside------------------------------------------------- -->
+        <!-- ----------------------------------------------aside---------------------------------------- -->
         <aside>
             <h1>Les plus populaires</h1>
             <div class="populaires">
-                <!-- ------------------------------------------Image 1----------------------------------- -->
-                <div class="image-1">
-                    <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            alt="Hôtel-Le-soleil-du-matin"></a>
 
-
+                <div class="choix">
                     <a href="#">
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="Hôtel-Le-soleil-du-matin">
                         <h2>Hôtel Le soleil du matin</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 128€</h3>
-                    </a>
-                    <a href="#">
+
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -224,19 +185,14 @@
                     </a>
                 </div>
 
-                <!-- -------------------------------------------Image 2------------------------------------------------- -->
-                <div class="image-2">
-                    <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            alt="Hôtel-Le-soleil-du-matin"></a>
 
-
+                <div class="choix">
                     <a href="#">
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="Hôtel-Le-soleil-du-matin">
                         <h2>Hôtel Le soleil du matin</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 128€</h3>
-                    </a>
-                    <a href="#">
+
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -244,18 +200,14 @@
                         <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
-                <!-- --------------------------------------------Image 3------------------------------------------------- -->
-                <div class="image-3">
-                    <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            alt="Hôtel-Le-soleil-du-matin"></a>
 
+                <div class="choix">
                     <a href="#">
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="Hôtel-Le-soleil-du-matin">
                         <h2>Hôtel Le soleil du matin</h2>
-                    </a>
-                    <a href="#">
                         <h3>Nuit à partir de 128€</h3>
-                    </a>
-                    <a href="#">
+
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -264,56 +216,44 @@
                     </a>
                 </div>
             </div>
-
-
         </aside>
     </section>
-
+    <!-- --------------------------------------------------Main------------------------------------------------------>
     <main>
         <h2>Activités à Marseille</h2>
+
         <div class="ativités">
 
-            <div class="vieux-port">
-                <div class="card">
-                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt=" Vieux-Port">
-                    <div class="container">
-                        <h4><b>Vieux-Port</b></h4>
+            <div class="card">
+                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="
+                        Vieux-Port">
+                    <h4><b>Vieux-Port</b></h4>
+                </a>
 
-                    </div>
+            </div>
 
-                </div>
+            <div class="card">
+                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
+                        Vieux-Port">
+                    <h4><b>Vieux-Port</b></h4>
+                </a>
+            </div>
 
-                <div class="pomègues">
+            <div class="card">
+                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
+                        Vieux-Port">
+                    <h4><b>Vieux-Port</b></h4>
+                </a>
+            </div>
 
-                    <div class="card">
-                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt=" Vieux-Port">
-                        <div class="container">
-                            <h4><b>Vieux-Port</b></h4>
+            <div class="card">
+                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
+                        Vieux-Port">
+                    <h4><b>Vieux-Port</b></h4>
+                </a>
+            </div>
 
-                        </div>
-                    </div>
-
-                    <div class="calanques">
-
-                        <div class="card">
-                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
-                                Vieux-Port">
-                            <div class="container">
-                                <h4><b>Vieux-Port</b></h4>
-
-                            </div>
-                        </div>
-
-                        <div class="notre-dame">
-                            <div class="card">
-                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
-                                    Vieux-Port">
-                                <div class="container">
-                                    <h4><b>Vieux-Port</b></h4>
-
-                                </div>
-                            </div>
-                        </div>
+        </div>
     </main>
 
     <footer>
